terraform/aws/modules/elasticsearch/sg.tf
resource "aws_security_group" "lambda" {
  name        = "lambda_cleanup_to_es_${var.domain}_${var.env}"
  description = "lambda_cleanup_to_es_${var.domain}_${var.env}"
  vpc_id      = "${var.vpc_id}"


  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  egress {
    from_port   = 53
    to_port     = 53
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  egress {
    from_port   = 53
    to_port     = 53
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  } 

  ingress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    self = true
  }

  tags {
    Name = "es-cleanup"
    env = "${var.env}"
  }
}
